--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            ${{ steps.plan.outputs }}
+            `${{ steps.plan.outputs }}\`
             const output = `
             #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
