--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,11 +44,10 @@ jobs:
         uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
-          PLAN: ${{ steps.plan.outputs.stdout }}
+          PLAN: testerraformTest
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            `${{ steps.plan.outputs }}\`
             const output = `
             #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
