--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,11 +39,15 @@ jobs:
 
       - name: Terraform Validate
         id: validate
+        env:
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
+        env:
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: terraform plan -no-color -input=false
         continue-on-error: true
 
@@ -51,7 +55,7 @@ jobs:
         uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
-          PLAN: testerraformTest
+          PLAN: testerraformTest env:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -84,6 +88,9 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        id: apply
+        env:
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: terraform apply -auto-approve -input=false
 
       - name: Add initial item to DynamoDB "counters"
@@ -96,3 +103,22 @@ jobs:
               "seq": {"N": "0"}
             }' \
             --region us-west-2
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        id: apply
+        env:
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+        run: terraform apply -auto-approve -input=false
+
+      - name: Run SQL Migration
+        if: steps.apply.outcome == 'success'
+        env:
+          PGHOST: ${{ steps.apply.outputs.db_instance_endpoint }}
+          PGUSER: "terraformAdmin"
+          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
+          PGDATABASE: "fiapdbPostgres"
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
+          psql -f ./initiate-postgres.sql
