fix: corrige a extração do endpoint do banco de dados para a migração SQL

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Run SQL Migration
         if: steps.apply.outcome == 'success'
         env:
-          PGHOST: ${{ steps.apply.outputs.db_instance_endpoint }}
+          PGHOST: ${{ steps.apply.outputs.db_instance_endpoint.split(':')[0] }}
           PGUSER: "terraformAdmin"
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
           PGDATABASE: "fiapdbPostgres"
