--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -115,3 +115,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql-client
           psql -f ./initiate-postgres.sql
+
+      - name: Update Pull Request Outputs
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: testerraformTest
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `
+            #### Terraform outputs \`${{ steps.apply.outputs }}\`;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
