feat: atualiza a mensagem do plano para descrever a criação de recursos para os bancos de dados

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
-          PLAN: testerraformTest env:
+          PLAN: Criando os recursos necessários para os banco de dados.
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
