--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -96,26 +96,27 @@ jobs:
       - name: Update Pull Request Outputs
         uses: actions/github-script@v6
         if: steps.apply.outcome == 'success'
-        env:
-          PLAN: Mostra outputs do Terraform após a aplicação bem-sucedida.
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `
-            <details><summary>Show Output</summary>
+        # env:
+        #   PLAN: Mostra outputs do Terraform após a aplicação bem-sucedida.
+        run: "echo ${{ steps.apply }}"
+        # with:
+        #   github-token: ${{ secrets.GITHUB_TOKEN }}
+          # script: |
+            # const output = `
+            # <details><summary>Show Output</summary>
 
-            \`\`\`terraform\n
-            ${{ steps.apply }}\
-            \`\`\`
+            # \`\`\`terraform\n
+            # ${{ steps.apply }}\
+            # \`\`\`
 
-            </details>;
+            # </details>;
 
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+            # github.rest.issues.createComment({
+            #   issue_number: context.issue.number,
+            #   owner: context.repo.owner,
+            #   repo: context.repo.repo,
+            #   body: output
+            # })
 
       - name: Add initial item to DynamoDB "counters"
         if: steps.apply.outcome == 'success'
