--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -98,7 +98,7 @@ jobs:
         if: steps.apply.outcome == 'success'
         # env:
         #   PLAN: Mostra outputs do Terraform após a aplicação bem-sucedida.
-        run: 'echo "${{ toJson(steps.apply.outputs.stdout) }}"'
+        run: 'echo "${{ steps.apply.outputs.stdout }}"'
           # with:
         #   github-token: ${{ secrets.GITHUB_TOKEN }}
           # script: |
