--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -98,8 +98,9 @@ jobs:
         if: steps.apply.outcome == 'success'
         # env:
         #   PLAN: Mostra outputs do Terraform após a aplicação bem-sucedida.
-        run: 'echo "${{ steps.apply.outputs.stdout }}"'
-          # with:
+        run: |
+          echo "${{ steps.apply.outputs.stdout }}" | grep 'db_instance_endpoint' | awk '{print $3}'
+        # with:
         #   github-token: ${{ secrets.GITHUB_TOKEN }}
           # script: |
             # const output = `
