--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -35,4 +35,6 @@ jobs:
       run: terraform plan -destroy -out=tfplan-destroy
 
     - name: 'Terraform Apply Destroy'
+      env:
+        TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
       run: terraform apply -auto-approve tfplan-destroy
